# mir_experiments

./: CMakeLists.txt  README.md  package.xml
containers/: Dockerfile  docker-compose.yml
include/mir_experiments/: TrackingOctomapServer.hpp
launch/: changes_based_on_tidy_room.launch  changes_based_on_tidy_small_room.launch  changes_based_on_tidy_small_room_depth_camera.launch  octomap_mapping.launch  octomap_mapping_depth_camera.launch  sim_tidy_hospital_room.launch  sim_tidy_small_hospital_room.launch  sim_untidy_hospital_room.launch  sim_untidy_small_hospital_room.launch
maps/: tidy.bt  tidy_small.bt  tidy_small_depth_camera.bt
maps/move_base/untidy_small/: map.pgm  map.yaml
media/: mir_experiment2.mkv
notes/: sample_driver_run.txt  sample_new_driver_run.txt
scripts/: mvc.py
src/: TrackingOctomapServer.cpp
web/: demo.html
