<?xml version="1.0"?>
<package format="2">
  <name>mir_experiments</name>
  <version>0.0.1</version>
  <description>The mir_experiments package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mir_actions</depend>
  <depend>mir_description</depend>
  <depend>mir_driver</depend>
  <depend>mir_dwb_critics</depend>
  <depend>mir_gazebo</depend>
  <depend>mir_msgs</depend>
  <depend>mir_navigation</depend>
  <depend>octomap_server</depend>
  <depend>laserscan_to_pointcloud</depend>
  <depend>roboskel_ros_resources</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>


</package>
